--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -123,6 +123,7 @@
   "team-removed-successfully": "Team removed successfully.",
   "leave-team-confirmation": "Are you sure you want to leave the team? You'll lose access to all resources and data associated with the team.",
   "all-products": "All Products",
+  "overview": "Overview",
   "new-team": "New Team",
   "profile": "Profile",
   "team-not-found": "Team not found",
@@ -246,5 +247,113 @@
   "internal-server-error": "Internal Server Error !",
   "unable-to-find": "We're unable to find out what's happening! We suggest you to",
   "try-again-later": "or visit here later.",
-  "multiple-sso-teams": "User belongs to multiple teams with SSO enabled. Please enter your team slug to get started."
+  "multiple-sso-teams": "User belongs to multiple teams with SSO enabled. Please enter your team slug to get started.",
+  "market-identifiers": "Market Identifiers",
+  "market-identifiers-config": "Market Identifiers Configuration",
+  "google-places-url": "Google Places URL",
+  "facebook-business-url": "Facebook Business URL",
+  "reviews": "Reviews",
+  "reviews-dashboard": "Reviews Dashboard",
+  "google-reviews": "Google Reviews",
+  "facebook-reviews": "Facebook Reviews",
+  "yelp-reviews": "Yelp Reviews",
+  "no-google-reviews": "No Google reviews yet",
+  "no-facebook-reviews": "No Facebook reviews yet",
+  "no-yelp-reviews": "No Yelp reviews yet",
+  "overall-review-summary": "Overall Review Summary",
+  "average-rating": "Average Rating",
+  "total-reviews": "Total Reviews",
+  "response-rate": "Response Rate",
+  "sentiment-analysis": "Sentiment Analysis",
+  "emotional-breakdown": "Emotional Breakdown",
+  "topics-mentioned": "Topics Mentioned",
+  "no-topics-found": "No topics found in reviews",
+  "actionable-insights": "Actionable Insights",
+  "actionable-reviews": "Actionable Reviews",
+  "actionable-reviews-help": "Reviews that suggest action could improve customer satisfaction",
+  "competitor-mentions": "Competitor Mentions",
+  "reviews-mention-competitors": "reviews mention competitors",
+  "rating-distribution": "Rating Distribution",
+  "all-reviews": "All Reviews",
+  "all": "All",
+  "sort-by": "Sort by",
+  "date": "Date",
+  "rating": "Rating",
+  "no-reviews-found": "No reviews found matching your criteria",
+  "business-reply": "Business Reply",
+  "reply": "Reply",
+  "replied": "Replied",
+  "edit-reply": "Edit Reply",
+  "actionable": "Actionable",
+  "keywords": "Keywords",
+  "topics": "Topics",
+  "photos": "photos",
+  "high-priority": "High Priority",
+  "page": "Page",
+  "of": "of",
+  "showing": "Showing",
+  "to": "to",
+  "per-page": "Per page",
+  "previous": "Previous",
+  "next": "Next",
+  "star": "star",
+  "stars": "stars",
+  "no-business-profile": "No business profile found",
+  "add-google-maps-url": "Please add your Google Maps URL in the Market Identifiers settings",
+  "view-on-platform": "View on Platform",
+  "copy-text": "Copy Text",
+  "mark-as-important": "Mark as Important",
+  "mark-as-normal": "Mark as Normal",
+  "mark-as-read": "Mark as Read",
+  "mark-as-unread": "Mark as Unread",
+  "marked-as-important": "Marked as important",
+  "marked-as-normal": "Marked as normal",
+  "marked-as-read": "Marked as read",
+  "marked-as-unread": "Marked as unread",
+  "never-synced": "Never synced",
+  "sync-available-now": "Available now",
+  "available-in": "Available in",
+  "hour": "hour",
+  "hours": "hours",
+  "seconds": "seconds",
+  "last-synced": "Last Synced",
+  "next-sync": "Next sync",
+  "syncing": "Syncing...",
+  "sync-now": "Sync Now",
+  "reviews-synced-success": "Reviews synced successfully",
+  "error-syncing-reviews": "Error syncing reviews",
+  "isImportant-updated-successfully": "Review importance updated successfully",
+  "isRead-updated-successfully": "Review read status updated successfully",
+  "error-updating-isImportant": "Error updating review importance",
+  "error-updating-isRead": "Error updating review read status",
+  "all-ratings": "All Ratings",
+  "filter-by-rating": "Filter by Rating",
+  "filter-by-status": "Filter by Status",
+  "newest-first": "Newest First",
+  "oldest-first": "Oldest First",
+  "highest-rating": "Highest Rating",
+  "lowest-rating": "Lowest Rating",
+  "recent-trend": "Recent Trend",
+  "positive": "Positive",
+  "neutral": "Neutral",
+  "negative": "Negative",
+  "recent-reviews": "Recent Reviews",
+  "read": "Read",
+  "unread": "Unread",
+  "important": "Important",
+  "not-replied": "Not Replied",
+  "error-loading-reviews": "Error loading reviews",
+  "retry": "Retry",
+  "average-rating-explanation": "The average rating is calculated by summing all review ratings (1-5 stars) and dividing by the total number of reviews. This gives you a clear picture of your overall customer satisfaction. The calculation is: (Sum of all ratings) ÷ (Total number of reviews).",
+  "average-rating-suggestion": "Aim for an average rating above 4.0 to maintain a positive reputation. Studies show that businesses with ratings below 4.0 often see a significant drop in customer trust and conversion rates.",
+  
+  "response-rate-explanation": "The response rate shows the percentage of reviews that have received a reply from your team. It's calculated by: (Number of reviews with replies) ÷ (Total number of reviews) × 100. This metric helps measure your team's engagement with customer feedback.",
+  "response-rate-suggestion": "Try to maintain a response rate above 80% to show customers you value their feedback. Quick responses (within 24-48 hours) can significantly improve customer satisfaction and loyalty.",
+  
+  "sentiment-analysis-explanation": "Sentiment analysis categorizes reviews as positive, neutral, or negative based on the language used. Reviews are scored from -1 to 1, where: Positive > 0.33, Neutral = -0.33 to 0.33, and Negative < -0.33. This helps identify emotional trends in customer feedback.",
+  "sentiment-analysis-suggestion": "Monitor negative sentiment trends to identify areas for improvement. A sudden increase in negative sentiment might indicate a specific issue that needs immediate attention.",
+  
+  "popular-keywords-explanation": "Keywords are extracted from review text to identify common themes and topics. The system counts how often each keyword appears across all reviews, then displays the top 5 most frequently mentioned terms. This helps identify what aspects of your service customers talk about most.",
+  "popular-keywords-suggestion": "Use positive keywords in your marketing and address negative ones in your service improvements. If certain keywords appear frequently in negative reviews, they may indicate areas needing immediate attention."
+
 }
